# Recommender-system

./: .gitignore  README.md  notebook.ipynb  pyproject.toml
.github/workflows/: code_check.yml
model/: train.py
model/train/: recommender.py  recommender_feature.py  recommender_variational.py
notebooks/: experiment.ipynb  exploration.ipynb  recommender.ipynb  testing.ipynb  training.ipynb  variational.ipynb
src/model/: __base.py  __feature.py  __variational.py  functions.py  train.py
src/utils/: checkpoint.py  dataset.py
test/: test_checkpoint.py  test_data_split.py  test_dataset.py
utils/: checkpoint.py  dataset.py
