[project]
name = "recommender-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "matplotlib>=3.10.7",
    "numba>=0.62.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "ruff>=0.14.4",
    "scipy>=1.16.3",
    "typing-extensions>=4.15.0",
]
